# py-code-mode

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.base  Dockerfile.tools  entrypoint.sh
docker/configs/: tools.yaml
docs/: ARCHITECTURE.md  HANDOFF-subprocess-executor.md  ROADMAP-execution-and-deps.md  artifacts.md  cli-reference.md  dependencies.md  executors.md  getting-started.md  integrations.md  production.md  session-api.md  skills.md  storage.md  tools.md
examples/: deps_demo.py
examples/autogen/: README.md  integration_test.py  pyproject.toml
examples/autogen-direct/: .gitignore  README.md  agent.py  integration_test.py
examples/autogen-direct/test_skills/: get_hn_headlines.py
examples/autogen-mcp/: README.md  agent.py  pyproject.toml
examples/azure-container-apps/: .gitignore  Dockerfile  Dockerfile.agent  README.md  agent.py  agent_server.py  bootstrap_redis.py  pyproject.toml
examples/azure-container-apps/deploy/: app.bicep  container-app.yaml  deploy.sh  infra.bicep  main.bicep  redis.bicep
examples/minimal/: README.md  agent.py  pyproject.toml
examples/shared/mcp-tools/: fetch.yaml  time.yaml
examples/shared/skills/: analyze_repo.py
examples/shared/tools/: curl.yaml  example_mcp.yaml  jq.yaml
examples/subprocess/: README.md  example.py  pyproject.toml
src/py_code_mode/: __init__.py  artifacts.py  backend.py  bootstrap.py  errors.py  executor.py  http_adapter.py  mcp_adapter.py  mcp_server.py  namespace.py  redis_artifacts.py  redis_tools.py  registry.py  semantic.py  session.py  skill_store.py  skills.py  storage.py  store.py  tool_types.py  types.py
src/py_code_mode/adapters/: __init__.py  base.py  cli.py  cli_schema.py
src/py_code_mode/artifacts/: __init__.py  base.py  file.py  redis.py
src/py_code_mode/backends/: __init__.py  in_process.py
src/py_code_mode/backends/container/: __init__.py  config.py  executor.py  server.py
src/py_code_mode/cli/: __init__.py  mcp_server.py  store.py
src/py_code_mode/container/: __init__.py  client.py  config.py  executor.py  server.py
src/py_code_mode/execution/: __init__.py  protocol.py  registry.py
src/py_code_mode/execution/container/: __init__.py  client.py  config.py  executor.py  server.py
src/py_code_mode/execution/in_process/: __init__.py  config.py  executor.py  skills_namespace.py
src/py_code_mode/execution/subprocess/: __init__.py  config.py  executor.py  host.py  kernel_init.py  namespace.py  rpc.py  venv.py
src/py_code_mode/integrations/: __init__.py  autogen.py
src/py_code_mode/skills/: __init__.py  embeddings.py  library.py  skill.py  store.py  vector_store.py
src/py_code_mode/skills/vector_stores/: __init__.py  chroma.py  redis_store.py
src/py_code_mode/storage/: __init__.py  backends.py  redis_tools.py
src/py_code_mode/tools/: __init__.py  loader.py  namespace.py  registry.py  types.py
src/py_code_mode/tools/adapters/: __init__.py  base.py  http.py  mcp.py
src/py_code_mode/tools/adapters/cli/: __init__.py  adapter.py  schema.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_backend.py  test_backend_e2e.py  test_backend_integration.py  test_backend_user_journey.py  test_background_embedder.py  test_bootstrap.py  test_chroma_vector_store.py  test_cli_adapter.py  test_cli_adapter_unified.py  test_cli_schema.py  test_deps_config_gaps.py  test_deps_installer.py  test_deps_namespace.py  test_deps_store.py  test_error_handling.py  test_errors.py  test_escape_hatch.py  test_executor.py  test_executor_configs.py  test_executor_deps_methods.py  test_executor_protocol.py  test_feature_matrix_comprehensive.py  test_file_storage.py  test_http_adapter.py  test_integration.py  test_lazy_embedder.py  test_mcp_adapter.py  test_mcp_server.py  test_namespace.py  test_namespace_features.py  test_negative.py  test_redis_artifacts.py  test_redis_storage.py  test_redis_tools.py  test_redis_vector_store.py  test_registry.py  test_rpc_errors.py  (+22 more)
tests/container/: __init__.py  test_client.py  test_container_api.py  test_container_auth.py  test_executor.py  test_server.py
