[project]
name = "py-code-mode-autogen-mcp-example"
version = "0.1.0"
description = "AutoGen agent example using py-code-mode via MCP"
requires-python = ">=3.12"
dependencies = [
    "py-code-mode",
    "autogen-agentchat>=0.4",
    "autogen-ext[anthropic,mcp]>=0.4",
    "python-dotenv",
    "tiktoken>=0.12.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
py-code-mode = { path = "../..", editable = true }
